update solr dockerfile to solr 7 and copy schema dir to temp location.

--- a/warc-indexer/src/main/solr/Dockerfile
+++ b/warc-indexer/src/main/solr/Dockerfile
@@ -1,20 +1,14 @@
-FROM solr:6
+FROM solr:7
 
 USER root
 
-# Install gunzip so we can populate the system with test data:
-RUN set -ex; \
-  apt-get update; \
-  apt-get -y install gzip; \
-  rm -rf /var/lib/apt/lists/*;
-
-# Add a collection with our schema:
-ADD solr /opt/solr/server/solr/webarchive
+# Add a collection with webarchive-discovery nzwebarchive schema:
+ADD solr7 /opt/solr/server/solr/webarchive
 RUN chown -R solr /opt/solr/server/solr/webarchive
 
-# Add in test data support:
-COPY solr-sample.json.gz /
-COPY populate.sh /
+# Add webarchive-discovery nzwebarchive schema to tmp for populating volume mount:
+ADD solr7 /tmp/solr/webarchive
+RUN chown -R solr /tmp/solr/webarchive
 
 USER solr
 
