Update Dockerfile to add secondardy copy of Solr collection for making/restoring backups.

--- a/warc-indexer/src/main/solr/Dockerfile
+++ b/warc-indexer/src/main/solr/Dockerfile
@@ -10,5 +10,9 @@ RUN chown -R solr /opt/solr/server/solr/webarchive
 ADD solr7 /tmp/solr/webarchive
 RUN chown -R solr /tmp/solr/webarchive
 
+# Add directory for mounting volume to backup/restore collection
+RUN mkdir /tmp/solr/backup
+RUN chown -R solr:solr /tmp/solr/backup
+
 USER solr
 
